Bug 460006 - Panel height unexpectedly changes when changing Panel from vertical to horizontal position
Summary: Panel height unexpectedly changes when changing Panel from vertical to horizo...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-05 10:54 UTC by Patrick Silva
Modified: 2022-11-30 15:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
screen recording (1.34 MB, video/webm)
2022-10-05 10:54 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-10-05 10:54:11 UTC
Created attachment 152595 [details]
screen recording

SUMMARY
Please watch the attached screen recording. The height of vertical Panel is 40 and it increases to 44 after changing to horizontal position.

EXPECTED RESULT
the height should not change after changing the position of the Panel

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-10-09 23:49:27 UTC
Can reproduce.
Comment 2 Fushan Wen 2022-10-17 03:21:39 UTC
Can sometimes reproduce, usually after the width of the vertical panel is changed manually.
Comment 3 Bug Janitor Service 2022-11-26 17:48:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2371
Comment 4 Bug Janitor Service 2022-11-27 03:00:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2372
Comment 5 Fushan Wen 2022-11-30 15:01:36 UTC
Git commit ec181cd7b12b68f6b20959959bcf2ebb916c6f0a by Fushan Wen.
Committed on 30/11/2022 at 14:53.
Pushed by fusionfuture into branch 'master'.

shell: migrate old panel thickness settings

M  +2    -0    shell/CMakeLists.txt
A  +9    -0    shell/kconf_update/CMakeLists.txt
A  +65   -0    shell/kconf_update/plasmashell-5.27-use-panel-thickness-in-default-group.cpp     [License: GPL(v2.0+)]
A  +10   -0    shell/kconf_update/plasmashell-5.27-use-panel-thickness-in-default-group.upd

https://invent.kde.org/plasma/plasma-workspace/commit/ec181cd7b12b68f6b20959959bcf2ebb916c6f0a
Comment 6 Fushan Wen 2022-11-30 15:01:44 UTC
Git commit 4b7aecac50290fb9adc191219b84822a0508a612 by Fushan Wen.
Committed on 30/11/2022 at 14:32.
Pushed by fusionfuture into branch 'master'.

shell: always use the same thickness value for horizontal/vertical panel

This avoids desync between two thickness values.
FIXED-IN: 5.27

M  +1    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/4b7aecac50290fb9adc191219b84822a0508a612