shell: always use the same thickness value for horizontal/vertical panel

This avoids desync between two thickness values.

BUG: 460006
FIXED-IN: 5.27